--- a/css/index.css
+++ b/css/index.css
@@ -13,10 +13,10 @@ body{
     border-color:#333333;
     border-width:1px;
     background-color:#FFFFFF;
-    min-width:640px;
-    max-width:1024px;
-    max-height: 1024px;
-    min-height: 700px;
+    min-width:1024px;
+    /*max-width:1024px;*/
+    /*max-height: 1024px;*/
+    min-height: 768px;
     overflow-y:scroll;
     padding:10px 10px 10px 10px;
 }
