--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Tahoma;
+    font-family: Tahoma, serif;
     font-size:12pt;
     border-color:#111111;
     border-width: 1px;
