--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body{
     /*max-width:1024px;*/
     /*max-height: 1024px;*/
     min-height: 768px;
-    overflow-y:scroll;
+    /*overflow-y:scroll;*/
     padding:10px 10px 10px 10px;
 }
 
