--- a/css/index.css
+++ b/css/index.css
@@ -13,10 +13,10 @@ body{
     border-color:#333333;
     border-width:1px;
     background-color:#FFFFFF;
-    min-width:1024px;
+    /*min-width:1024px;*/
     /*max-width:1024px;*/
     /*max-height: 1024px;*/
-    min-height: 768px;
+    /*min-height: 768px;*/
     /*overflow-y:scroll;*/
     padding:10px 10px 10px 10px;
 }
@@ -35,8 +35,8 @@ body{
 
 #masthead{
     float:left;
-    min-width:200px;
-    min-height:200px;
+    /*min-width:200px;*/
+    /*min-height:200px;*/
     /*max-height:200px;*/
     border-color:#111111;
     border-width: 1px;
